--- a/bootsrap.html
+++ b/bootsrap.html
@@ -9,7 +9,70 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js" integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa" crossorigin="anonymous"></script>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+   
+    <div class="container">
+      <div class="row">
+        <div class="col-sm">
+          One of three columns
+        </div>
+        <div class="col-sm">
+          One of three columns
+        </div>
+        <div class="col-sm">
+          One of three columns
+        </div>
+      </div>
+    </div><br>
+
+   
+   
+     <div class="container"> 
+      <h1>Hello World!</h1>
+      <div class="row">
+        <div class="col-sm-6" style="background-color:yellow;">
+          <p>Lorem ipsum...</p>
+        </div>
+        <div class="col-sm-6" style="background-color:lavender;">
+          <p>Sed ut perspiciatis...</p>
+        </div>
+      </div>
+    </div><br>
+
+
+    <div class="container-fluid">
+      <h1>Small devices(sm)</h1>
+      <div class="row">
+        <div class="col-sm-3" style="background-color:black;">
+          <p>Lorem ipsum...</p>
+        </div>
+        <div class="col-sm-9" style="background-color:pink;">
+          <p>Sed ut perspiciatis...</p>
+        </div>
+      </div>
+    </div><br>
+
+    <div class="container-fluid">
+      <h1>Medium Device(md)</h1>
+      <div class="row">
+        <div class="col-sm-3 col-md-6" style="background-color:yellow;">
+          <p>Lorem ipsum...</p>
+        </div>
+        <div class="col-sm-9 col-md-6" style="background-color:darkcyan;">
+          <p>Sed ut perspiciatis...</p>
+        </div>
+      </div>
+    </div><br>
+
+    <div class="container-fluid">
+      <h1>Large Devices(lg)</h1>
+      <div class="row">
+        <div class="col-lg-6" style="background-color:yellow;">
+          <p>Lorem ipsum...</p>
+        </div>
+        <div class="col-lg-6" style="background-color:pink;">
+          <p>Sed ut perspiciatis...</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
